--- a/SRC/mainwindow.ui
+++ b/SRC/mainwindow.ui
@@ -60,7 +60,7 @@ color: rgb(255, 200, 200);</string>
           </widget>
          </item>
          <item>
-          <widget class="QSpinBox" name="spnDecimal">
+          <widget class="TSpinBox64" name="spnDecimal">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
              <horstretch>0</horstretch>
@@ -1212,6 +1212,13 @@ color: rgb(255, 200, 200);</string>
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
+ <customwidgets>
+  <customwidget>
+   <class>TSpinBox64</class>
+   <extends>QSpinBox</extends>
+   <header>tspinbox64.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
