--- a/SRC/mainwindow.ui
+++ b/SRC/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>784</width>
-    <height>253</height>
+    <height>483</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -21,13 +21,14 @@
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgb(0, 44, 255);
-font: 7pt &quot;MS Shell Dlg 2&quot;;
+/*font: 7pt &quot;MS Shell Dlg 2&quot;;*/
+font: 8pt &quot;PT Mono&quot;;
 color: rgb(255, 200, 200);</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout_3">
     <item row="0" column="0">
-     <widget class="QGroupBox" name="groupBox_6">
+     <widget class="QGroupBox" name="grpDEC_HEX_BIN">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
         <horstretch>0</horstretch>
@@ -43,7 +44,7 @@ color: rgb(255, 200, 200);</string>
       <property name="title">
        <string>DEC / HEX / BIN</string>
       </property>
-      <layout class="QGridLayout" name="gridLayout_2">
+      <layout class="QGridLayout" name="gridLayout_2" columnstretch="0,0,1">
        <item row="0" column="0">
         <layout class="QHBoxLayout" name="horizontalLayout">
          <item>
@@ -60,24 +61,12 @@ color: rgb(255, 200, 200);</string>
           </widget>
          </item>
          <item>
-          <widget class="TSpinBox64" name="spnDecimal">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
+          <widget class="BMQSpinBox" name="spnDecimal" native="true">
            <property name="minimumSize">
             <size>
-             <width>142</width>
+             <width>160</width>
              <height>0</height>
             </size>
-           </property>
-           <property name="minimum">
-            <number>-999999999</number>
-           </property>
-           <property name="maximum">
-            <number>999999999</number>
            </property>
           </widget>
          </item>
@@ -99,7 +88,7 @@ color: rgb(255, 200, 200);</string>
           </widget>
          </item>
          <item>
-          <widget class="THexSpinBox" name="spnHexadecimal">
+          <widget class="BMQSpinBox" name="spnHexadecimal" native="true">
            <property name="minimumSize">
             <size>
              <width>160</width>
@@ -126,7 +115,14 @@ color: rgb(255, 200, 200);</string>
           </widget>
          </item>
          <item>
-          <widget class="QLineEdit" name="edtBinary"/>
+          <widget class="BMQSpinBox" name="spnBinary" native="true">
+           <property name="minimumSize">
+            <size>
+             <width>160</width>
+             <height>0</height>
+            </size>
+           </property>
+          </widget>
          </item>
         </layout>
        </item>
@@ -134,7 +130,7 @@ color: rgb(255, 200, 200);</string>
      </widget>
     </item>
     <item row="1" column="0">
-     <widget class="QGroupBox" name="groupBox">
+     <widget class="QGroupBox" name="grp32_bits">
       <property name="maximumSize">
        <size>
         <width>766</width>
@@ -146,7 +142,7 @@ color: rgb(255, 200, 200);</string>
       </property>
       <layout class="QGridLayout" name="gridLayout">
        <item row="1" column="0">
-        <widget class="QGroupBox" name="groupBox_4">
+        <widget class="QGroupBox" name="grpByte3">
          <property name="title">
           <string>byte 3</string>
          </property>
@@ -391,24 +387,49 @@ color: rgb(255, 200, 200);</string>
             </item>
            </layout>
           </item>
-          <item row="1" column="4" colspan="4">
-           <widget class="THexSpinBox" name="spnByte3_HexRight">
-            <property name="buttonSymbols">
-             <enum>QAbstractSpinBox::UpDownArrows</enum>
+          <item row="2" column="4" colspan="4">
+           <widget class="BMQSpinBox" name="spnByte3_HexRight" native="true">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
             </property>
-            <property name="value">
-             <number>0</number>
+            <property name="minimumSize">
+             <size>
+              <width>20</width>
+              <height>16</height>
+             </size>
+            </property>
+            <property name="focusPolicy">
+             <enum>Qt::WheelFocus</enum>
             </property>
            </widget>
           </item>
-          <item row="1" column="0" colspan="4">
-           <widget class="THexSpinBox" name="spnByte3_HexLeft"/>
+          <item row="2" column="0" colspan="4">
+           <widget class="BMQSpinBox" name="spnByte3_HexLeft" native="true">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="minimumSize">
+             <size>
+              <width>20</width>
+              <height>16</height>
+             </size>
+            </property>
+            <property name="focusPolicy">
+             <enum>Qt::WheelFocus</enum>
+            </property>
+           </widget>
           </item>
          </layout>
         </widget>
        </item>
        <item row="1" column="2">
-        <widget class="QGroupBox" name="groupBox_3">
+        <widget class="QGroupBox" name="grpByte1">
          <property name="title">
           <string>byte 1</string>
          </property>
@@ -653,16 +674,41 @@ color: rgb(255, 200, 200);</string>
             </item>
            </layout>
           </item>
-          <item row="1" column="0" colspan="4">
-           <widget class="THexSpinBox" name="spnByte1_HexLeft"/>
-          </item>
-          <item row="1" column="4" colspan="4">
-           <widget class="THexSpinBox" name="spnByte1_HexRight">
-            <property name="buttonSymbols">
-             <enum>QAbstractSpinBox::UpDownArrows</enum>
+          <item row="2" column="4" colspan="4">
+           <widget class="BMQSpinBox" name="spnByte1_HexRight" native="true">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
             </property>
-            <property name="value">
-             <number>0</number>
+            <property name="minimumSize">
+             <size>
+              <width>20</width>
+              <height>16</height>
+             </size>
+            </property>
+            <property name="focusPolicy">
+             <enum>Qt::WheelFocus</enum>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="0" colspan="4">
+           <widget class="BMQSpinBox" name="spnByte1_HexLeft" native="true">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="minimumSize">
+             <size>
+              <width>20</width>
+              <height>16</height>
+             </size>
+            </property>
+            <property name="focusPolicy">
+             <enum>Qt::WheelFocus</enum>
             </property>
            </widget>
           </item>
@@ -670,22 +716,12 @@ color: rgb(255, 200, 200);</string>
         </widget>
        </item>
        <item row="1" column="3">
-        <widget class="QGroupBox" name="groupBox_2">
+        <widget class="QGroupBox" name="grpByte0">
          <property name="title">
           <string>byte 0</string>
          </property>
          <layout class="QGridLayout" name="gridLayout_18">
-          <item row="1" column="4" colspan="4">
-           <widget class="THexSpinBox" name="spnByte0_HexRight">
-            <property name="buttonSymbols">
-             <enum>QAbstractSpinBox::UpDownArrows</enum>
-            </property>
-            <property name="value">
-             <number>0</number>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="4">
+          <item row="0" column="5">
            <layout class="QGridLayout" name="gridLayout_17">
             <item row="0" column="0">
              <widget class="QCheckBox" name="chkByte0_03">
@@ -715,7 +751,7 @@ color: rgb(255, 200, 200);</string>
             </item>
            </layout>
           </item>
-          <item row="0" column="5">
+          <item row="0" column="6">
            <layout class="QGridLayout" name="gridLayout_11">
             <item row="0" column="0">
              <widget class="QCheckBox" name="chkByte0_02">
@@ -805,7 +841,7 @@ color: rgb(255, 200, 200);</string>
             </item>
            </layout>
           </item>
-          <item row="0" column="7">
+          <item row="0" column="8">
            <layout class="QGridLayout" name="gridLayout_14">
             <item row="0" column="0">
              <widget class="QCheckBox" name="chkByte0_00">
@@ -835,7 +871,7 @@ color: rgb(255, 200, 200);</string>
             </item>
            </layout>
           </item>
-          <item row="0" column="6">
+          <item row="0" column="7">
            <layout class="QGridLayout" name="gridLayout_15">
             <item row="0" column="0">
              <widget class="QCheckBox" name="chkByte0_01">
@@ -926,13 +962,48 @@ color: rgb(255, 200, 200);</string>
            </layout>
           </item>
           <item row="1" column="0" colspan="4">
-           <widget class="THexSpinBox" name="spnByte0_HexLeft"/>
+           <widget class="BMQSpinBox" name="spnByte0_HexLeft" native="true">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="minimumSize">
+             <size>
+              <width>20</width>
+              <height>16</height>
+             </size>
+            </property>
+            <property name="focusPolicy">
+             <enum>Qt::WheelFocus</enum>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="5" colspan="4">
+           <widget class="BMQSpinBox" name="spnByte0_HexRight" native="true">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="minimumSize">
+             <size>
+              <width>20</width>
+              <height>16</height>
+             </size>
+            </property>
+            <property name="focusPolicy">
+             <enum>Qt::WheelFocus</enum>
+            </property>
+           </widget>
           </item>
          </layout>
         </widget>
        </item>
        <item row="1" column="1">
-        <widget class="QGroupBox" name="groupBox_5">
+        <widget class="QGroupBox" name="grpByte2">
          <property name="title">
           <string>byte 2</string>
          </property>
@@ -1177,20 +1248,70 @@ color: rgb(255, 200, 200);</string>
             </item>
            </layout>
           </item>
-          <item row="1" column="0" colspan="4">
-           <widget class="THexSpinBox" name="spnByte2_HexLeft"/>
-          </item>
-          <item row="1" column="4" colspan="4">
-           <widget class="THexSpinBox" name="spnByte2_HexRight">
-            <property name="buttonSymbols">
-             <enum>QAbstractSpinBox::UpDownArrows</enum>
+          <item row="2" column="4" colspan="4">
+           <widget class="BMQSpinBox" name="spnByte2_HexRight" native="true">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
             </property>
-            <property name="value">
-             <number>0</number>
+            <property name="minimumSize">
+             <size>
+              <width>20</width>
+              <height>16</height>
+             </size>
+            </property>
+            <property name="focusPolicy">
+             <enum>Qt::WheelFocus</enum>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="0" colspan="4">
+           <widget class="BMQSpinBox" name="spnByte2_HexLeft" native="true">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="minimumSize">
+             <size>
+              <width>20</width>
+              <height>16</height>
+             </size>
+            </property>
+            <property name="focusPolicy">
+             <enum>Qt::WheelFocus</enum>
             </property>
            </widget>
           </item>
          </layout>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </item>
+    <item row="2" column="0">
+     <widget class="QGroupBox" name="grpBitmask">
+      <property name="title">
+       <string>Bitmask</string>
+      </property>
+      <layout class="QGridLayout" name="gridLayout_4" columnstretch="0">
+       <item row="0" column="0">
+        <widget class="QTableWidget" name="tblBitmask">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+           <horstretch>8</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="selectionMode">
+          <enum>QAbstractItemView::NoSelection</enum>
+         </property>
+         <property name="selectionBehavior">
+          <enum>QAbstractItemView::SelectRows</enum>
+         </property>
         </widget>
        </item>
       </layout>
@@ -1204,33 +1325,127 @@ color: rgb(255, 200, 200);</string>
      <x>0</x>
      <y>0</y>
      <width>784</width>
-     <height>16</height>
+     <height>18</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuFile">
+    <property name="title">
+     <string>File</string>
+    </property>
+    <addaction name="actFILE_Open"/>
+    <addaction name="actFILE_Save"/>
+    <addaction name="actFILE_Save_As"/>
+    <addaction name="actFILE_Quit"/>
+   </widget>
+   <widget class="QMenu" name="menuView">
+    <property name="title">
+     <string>View</string>
+    </property>
+    <addaction name="actVIEW_DEC_HEX_BIN"/>
+    <addaction name="actVIEW_32_bits"/>
+    <addaction name="actVIEW_Bitmask"/>
+    <addaction name="actVIEW_MainToolbar"/>
+   </widget>
+   <addaction name="menuFile"/>
+   <addaction name="menuView"/>
   </widget>
-  <widget class="QToolBar" name="mainToolBar">
+  <widget class="QToolBar" name="tbrMainToolbar">
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
    </attribute>
    <attribute name="toolBarBreak">
     <bool>false</bool>
    </attribute>
+   <addaction name="actFILE_Open"/>
+   <addaction name="actFILE_Save"/>
+   <addaction name="actFILE_Save_As"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
+  <action name="actFILE_Open">
+   <property name="icon">
+    <iconset resource="res.qrc">
+     <normaloff>:/PICS/db_open_2b.png</normaloff>:/PICS/db_open_2b.png</iconset>
+   </property>
+   <property name="text">
+    <string>Open</string>
+   </property>
+  </action>
+  <action name="actFILE_Save">
+   <property name="icon">
+    <iconset resource="res.qrc">
+     <normaloff>:/PICS/Ok_2.png</normaloff>:/PICS/Ok_2.png</iconset>
+   </property>
+   <property name="text">
+    <string>Save</string>
+   </property>
+  </action>
+  <action name="actFILE_Save_As">
+   <property name="icon">
+    <iconset resource="res.qrc">
+     <normaloff>:/PICS/View_m.png</normaloff>:/PICS/View_m.png</iconset>
+   </property>
+   <property name="text">
+    <string>Save As</string>
+   </property>
+  </action>
+  <action name="actFILE_Quit">
+   <property name="icon">
+    <iconset resource="res.qrc">
+     <normaloff>:/PICS/exit_5.png</normaloff>:/PICS/exit_5.png</iconset>
+   </property>
+   <property name="text">
+    <string>Quit</string>
+   </property>
+  </action>
+  <action name="actVIEW_DEC_HEX_BIN">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>DEC / HEX / BIN</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+1</string>
+   </property>
+  </action>
+  <action name="actVIEW_32_bits">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>32 bits</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+2</string>
+   </property>
+  </action>
+  <action name="actVIEW_Bitmask">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Bitmask</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+3</string>
+   </property>
+  </action>
+  <action name="actVIEW_MainToolbar">
+   <property name="text">
+    <string>Main Toolbar</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <customwidgets>
   <customwidget>
-   <class>TSpinBox64</class>
-   <extends>QSpinBox</extends>
-   <header>tspinbox64.h</header>
-  </customwidget>
-  <customwidget>
-   <class>THexSpinBox</class>
-   <extends>QSpinBox</extends>
-   <header>thexspinbox.h</header>
+   <class>BMQSpinBox</class>
+   <extends>QWidget</extends>
+   <header>bmqspinbox.h</header>
   </customwidget>
  </customwidgets>
- <resources/>
+ <resources>
+  <include location="res.qrc"/>
+ </resources>
  <connections/>
 </ui>
