--- a/SRC/mainwindow.ui
+++ b/SRC/mainwindow.ui
@@ -1335,10 +1335,10 @@ QHeaderView::section {
           </sizepolicy>
          </property>
          <property name="selectionMode">
-          <enum>QAbstractItemView::NoSelection</enum>
+          <enum>QAbstractItemView::ExtendedSelection</enum>
          </property>
          <property name="selectionBehavior">
-          <enum>QAbstractItemView::SelectRows</enum>
+          <enum>QAbstractItemView::SelectItems</enum>
          </property>
         </widget>
        </item>
@@ -1353,7 +1353,7 @@ QHeaderView::section {
      <x>0</x>
      <y>0</y>
      <width>784</width>
-     <height>19</height>
+     <height>18</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -1376,6 +1376,7 @@ QHeaderView::section {
     <addaction name="separator"/>
     <addaction name="actVIEW_MainToolbar"/>
     <addaction name="actVIEW_32_bits_HEX_fields"/>
+    <addaction name="actVIEW_Bitmask_St_Color_Columns"/>
     <addaction name="separator"/>
     <addaction name="actVIEW_Color_Standart"/>
     <addaction name="actVIEW_Color_jasha"/>
@@ -1386,8 +1387,17 @@ QHeaderView::section {
     </property>
     <addaction name="actHELP_About"/>
    </widget>
+   <widget class="QMenu" name="menuModbus">
+    <property name="title">
+     <string>Modbus</string>
+    </property>
+    <addaction name="actMODBUS_Start"/>
+    <addaction name="actMODBUS_Stop"/>
+    <addaction name="actMODBUS_Settings"/>
+   </widget>
    <addaction name="menuFile"/>
    <addaction name="menuView"/>
+   <addaction name="menuModbus"/>
    <addaction name="menuHelp"/>
   </widget>
   <widget class="QToolBar" name="tbrMainToolbar">
@@ -1402,6 +1412,10 @@ QHeaderView::section {
    <addaction name="actFILE_Save"/>
    <addaction name="actFILE_Save_As"/>
    <addaction name="actFILE_Quit"/>
+   <addaction name="separator"/>
+   <addaction name="actEDIT_Choice_Color_St0"/>
+   <addaction name="actEDIT_Choice_Color_St1"/>
+   <addaction name="actEDIT_Choice_Color_AllSt"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <action name="actFILE_Open">
@@ -1523,6 +1537,65 @@ QHeaderView::section {
    </property>
    <property name="text">
     <string>Close</string>
+   </property>
+  </action>
+  <action name="actVIEW_Bitmask_St_Color_Columns">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Bitmask / St-color Columns</string>
+   </property>
+  </action>
+  <action name="actEDIT_Choice_Color_St0">
+   <property name="icon">
+    <iconset resource="res.qrc">
+     <normaloff>:/PICS/colors_st0_m.png</normaloff>:/PICS/colors_st0_m.png</iconset>
+   </property>
+   <property name="text">
+    <string>Choice Color For State 0</string>
+   </property>
+   <property name="toolTip">
+    <string>Choice Color For State 0</string>
+   </property>
+  </action>
+  <action name="actEDIT_Choice_Color_St1">
+   <property name="icon">
+    <iconset resource="res.qrc">
+     <normaloff>:/PICS/colors_st1_m.png</normaloff>:/PICS/colors_st1_m.png</iconset>
+   </property>
+   <property name="text">
+    <string>Choice Color For State 1</string>
+   </property>
+   <property name="toolTip">
+    <string>Choice Color For State 1</string>
+   </property>
+  </action>
+  <action name="actEDIT_Choice_Color_AllSt">
+   <property name="icon">
+    <iconset resource="res.qrc">
+     <normaloff>:/PICS/colors_allst_m.png</normaloff>:/PICS/colors_allst_m.png</iconset>
+   </property>
+   <property name="text">
+    <string>Choice Color For All State</string>
+   </property>
+   <property name="toolTip">
+    <string>Choice Color For All State</string>
+   </property>
+  </action>
+  <action name="actMODBUS_Start">
+   <property name="text">
+    <string>Start</string>
+   </property>
+  </action>
+  <action name="actMODBUS_Stop">
+   <property name="text">
+    <string>Stop</string>
+   </property>
+  </action>
+  <action name="actMODBUS_Settings">
+   <property name="text">
+    <string>Settings</string>
    </property>
   </action>
  </widget>
